# Scrible

./: .gitignore  README.md  fly.toml  package-lock.json  package.json
.github/workflows/: ci.yml
app/: App.tsx  app.json  eas.json  google-services.json  index.ts  package.json  tsconfig.json
app/src/: alarms.ts  analytics.ts  api.ts  push.ts  speech.ts  store.ts  theme.ts  types.ts
app/src/screens/: Activity.tsx  Auth.tsx  (+4 more)
app/test/: store.test.ts
backend/: Dockerfile  fly.toml  package-lock.json  package.json
backend/scripts/: corpus.txt  dsr.ts  probe.mjs
backend/src/: config.ts  enrichment.ts  index.ts  server.ts  types.ts
backend/test/: account.test.ts  ai-provider-chain.test.ts  analytics.test.ts  auth.test.ts  calendar.test.ts  consent.test.ts  context-engine.test.ts  desktop.test.ts  edge-cases.test.ts  enrichment.test.ts  extension.test.ts  helpers.ts  personalization.test.ts  reminders.test.ts  sync.test.ts
desktop/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: api.ts  main.ts  matcher.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/test/: matcher.test.ts
desktop/watcher-core/: Cargo.toml
docs/: AI-MAP.md  ASSISTANT-PLAN.md  BUILD_PLAN.md  TRANSFER.md  data-classification.md  launch-checklist.md  privacy-policy.md  runbooks.md
docs/compliance/: store-compliance.md
docs/decisions/: 0001-phase-0-tech-stack.md
extension/: README.md  background.js  common.js  manifest.json  popup.html  popup.js
(+43 files in other folders)
